--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "peertube-theme-quickstart",
+  "name": "peertube-theme-pacerip",
   "version": "0.0.2",
-  "description": "PeerTube theme quickstart",
+  "description": "Theme for the PaceRIP PeerTube instance",
   "engine": {
     "peertube": ">=1.3.0"
   },
@@ -9,9 +9,9 @@
     "peertube",
     "theme"
   ],
-  "homepage": "https://framagit.org/framasoft/peertube/peertube-theme-quickstart",
-  "author": "Chocobozzz",
-  "bugs": "https://framagit.org/framasoft/peertube/peertube-theme-quickstart/issues",
+  "homepage": "https://github.com/ZacharyTalis/peertube-theme-pacerip",
+  "author": "ZacharyTalis",
+  "bugs": "https://github.com/ZacharyTalis/peertube-theme-pacerip/issues",
   "staticDirs": {
     "images": "public/images"
   },
