--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peertube-theme-pacerip",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Theme for the PaceRIP PeerTube instance",
   "engine": {
     "peertube": ">=1.3.0"
@@ -21,7 +21,9 @@
   "clientScripts": [
     {
       "script": "client/common-client-plugin.js",
-      "scopes": [ "common" ]
+      "scopes": [
+        "common"
+      ]
     }
   ],
   "translations": {
