--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peertube-theme-pacerip",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Theme for the PaceRIP PeerTube instance",
   "engine": {
     "peertube": ">=1.3.0"
@@ -18,14 +18,7 @@
   "css": [
     "assets/style.css"
   ],
-  "clientScripts": [
-    {
-      "script": "client/common-client-plugin.js",
-      "scopes": [
-        "common"
-      ]
-    }
-  ],
+  "clientScripts": [],
   "translations": {
     "fr-FR": "./languages/fr.json"
   }
