--- a/light-dark-flip/package.json
+++ b/light-dark-flip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peertube-theme-pacerip-light-dark-flip",
-  "version": "1.2.0",
+  "version": "1.2.0.1",
   "description": "Theme for the PaceRIP PeerTube instance, with light and dark colors flipped.",
   "engine": {
     "peertube": ">=1.3.0"
@@ -13,7 +13,7 @@
   "author": "ZacharyTalis",
   "bugs": "https://github.com/ZacharyTalis/peertube-theme-pacerip/issues",
   "css": [
-    "../assets/color-flip.css",
-    "../assets/style.css"
+    "assets/color-flip.css",
+    "assets/style.css"
   ]
 }
