--- a/files/package.json
+++ b/files/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "peertube-theme-pacerip-light-dark-flip",
-  "version": "1.2.1",
-  "description": "Theme for the PaceRIP PeerTube instance, with light and dark colors flipped.",
+  "name": "peertube-theme-pacerip",
+  "version": "1.2.2",
+  "description": "Theme for the PaceRIP PeerTube instance",
   "engine": {
     "peertube": ">=1.3.0"
   },
@@ -13,7 +13,8 @@
   "author": "ZacharyTalis",
   "bugs": "https://github.com/ZacharyTalis/peertube-theme-pacerip/issues",
   "css": [
-    "assets/color-flip.css",
+    "assets/color.css",
     "assets/style.css"
-  ]
+  ],
+  "clientScripts": []
 }
